hw3/OOP/Solution/OOPUnitCore.java : Removed all the Exception thrown from methods declarations
    - now all exception that not supposed to happen are handled internally and
      not propagated

Signed-off-by: Yoni Bettan <ybettan@redhat.com>